--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /BackEnd/.vs/BackEnd/v17
 /BackEnd/.vs/BackEnd/v17
 BackEnd/.vs/BackEnd/v17/.suo
+BackEnd/.vs/BackEnd/v17/.suo
+BackEnd/.vs/BackEnd/v17/.futdcache.v2
+BackEnd/.vs/BackEnd/DesignTimeBuild/.dtbcache.v2
+BackEnd/.vs/BackEnd/v17/.suo
+*.v2
