--- a/BackEnd/appsettings.Development.json
+++ b/BackEnd/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "EdunovaContext": "Server=DESKTOP-B0IFIFV;Database=Raspored;Trusted_Connection=True;TrustServerCertificate=True"
+    "EdunovaContext": "Server=DESKTOP-PAQEUL1;Database=Raspored;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
