--- a/BackEnd/appsettings.Development.json
+++ b/BackEnd/appsettings.Development.json
@@ -6,6 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "EdunovaContext": "Server=DESKTOP-PAQEUL1;Database=Raspored;Trusted_Connection=True;TrustServerCertificate=True"
+    "EdunovaContext": "Data Source=SQL6031.site4now.net;Initial Catalog=db_aa67a5_raspored;User Id=db_aa67a5_raspored_admin;Password=kps24cro"
+    
+    //"EdunovaContext": "Server=DESKTOP-PAQEUL1;Database=Raspored;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
