--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EdunovaContext": "Data Source=SQL6031.site4now.net;Initial Catalog=db_aa67a5_raspored;User Id=db_aa67a5_raspored_admin;Password=kps24cro"
+    "EdunovaContext": "Data Source=db4502.databaseasp.net;Initial Catalog=db4502;User Id=db4502;Password=M?c3gX7@-wL8;Encrypt=False; MultipleActiveResultSets=True;"
   }
 }
