--- a/BackEnd/appsettings.Development.json
+++ b/BackEnd/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "EdunovaContext": "Data Source=SQL6031.site4now.net;Initial Catalog=db_aa67a5_raspored;User Id=db_aa67a5_raspored_admin;Password=kps24cro"
-    
+    "EdunovaContext": "Data Source=db4502.databaseasp.net;Initial Catalog=db4502;User Id=db4502;Password=M?c3gX7@-wL8"
+
     //"EdunovaContext": "Server=DESKTOP-PAQEUL1;Database=Raspored;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
