rad na backendu

--- a/BackEnd/appsettings.Development.json
+++ b/BackEnd/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "EdunovaContext": "Data Source=db4502.databaseasp.net;Initial Catalog=db4502;User Id=db4502;Password=M?c3gX7@-wL8"
+    "EdunovaContext": "Server=db4502.public.databaseasp.net; Database=db4502; User Id=db4502; Password=M?c3gX7@-wL8; Encrypt=False; MultipleActiveResultSets=True;"
 
     //"EdunovaContext": "Server=DESKTOP-PAQEUL1;Database=Raspored;Trusted_Connection=True;TrustServerCertificate=True"
   }
