--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -1,12 +1,13 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EdunovaContext": "Server=db4502.databaseasp.net; Database=db4502; User Id=db4502; Password=M?c3gX7@-wL8; Encrypt=False; MultipleActiveResultSets=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "EdunovaContext": "Data Source=db4502.databaseasp.net;Initial Catalog=db4502;User Id=db4502;Password=M?c3gX7@-wL8;Encrypt=False; MultipleActiveResultSets=True;"
   }
 }
